--- a/force-app/main/classes/FFClientBuilder.cls
+++ b/force-app/main/classes/FFClientBuilder.cls
@@ -3,21 +3,10 @@ public class FFClientBuilder {
     private final String sdkKey;
     private final FFConfig config;
     private Integer pollingIntervalInSeconds = 0;
+    private Boolean waitForinitialized = false;
 
-    private class CacheUpdator implements Callable {
 
-        private final FFClient client;
-
-        public CacheUpdator(FFClient client) {
-            this.client = client;
-        }
-
-        public Object call(String action, Map<String, Object> args) {
-            this.client.updateCache();
-            return true;
-        }
-    }
-
+    @TestVisible
     private class AlwaysFalse implements Callable {
 
         public Object call(String action, Map<String, Object> args) {
@@ -35,14 +24,29 @@ public class FFClientBuilder {
        return this;
     }
 
+    public FFClientBuilder withWaitForInitialized(Boolean waitForInitialzed) {
+        this.waitForinitialized = waitForInitialzed;
+        return this;
+     }
+
     public FFClient build(){
         FFClient client = FFClient.create(this.sdkKey, this.config);
-        if(pollingIntervalInSeconds > 0) {
-            new FFPoller(new CacheUpdator(client))
-            .staticDelay(this.pollingIntervalInSeconds)
-            .untilTrue(new AlwaysFalse())
-            .execute();
+
+        
+        if (this.waitForinitialized) {
+            // Fetch flags/segments before returning the client
+            client.updateCache();
         }
+
+        Boolean isPollingEnabled = pollingIntervalInSeconds > 0;
+        if (!isPollingEnabled) {
+            return client;
+        }
+
+        new FFPoller(new FFClient.CacheUpdator(client, waitForinitialized))
+        .staticDelay(this.pollingIntervalInSeconds)
+        .untilTrue(new AlwaysFalse())
+        .execute();
         return client;
     }
 }
