--- a/force-app/test/FFAuthServiceCachedTest.cls
+++ b/force-app/test/FFAuthServiceCachedTest.cls
@@ -5,20 +5,22 @@ private class FFAuthServiceCachedTest {
         public Integer called { get; set; }
         public Integer throwTimes { get; set; }
         public FFModels.AuthenticationResponse response {get;set;}
+        public Integer errorCode;
         public MockAuthenticator(FFModels.AuthenticationResponse response) {
             this.response = response;
             this.called = 0;
             this.throwTimes = 0;
         }
-        public MockAuthenticator(FFModels.AuthenticationResponse successResponse, Integer throwTimes) {
+        public MockAuthenticator(FFModels.AuthenticationResponse successResponse, Integer throwTimes, Integer errorCode) {
             this.called = 0;
             this.response = successResponse;
             this.throwTimes = throwTimes;
+            this.errorCode = errorCode;
         }
         public FFModels.AuthenticationResponse authenticate(Map<String, Object> params) {
             this.called++;
             if(this.called <= this.throwTimes) {
-                throw new FFBase.ApiException(403, 'Forbidden', new Map<String,String>(), '');
+                throw new FFBase.ApiException(this.errorCode, 'Forbidden', new Map<String,String>(), '');
             }
             return this.response;
         }
@@ -31,24 +33,46 @@ private class FFAuthServiceCachedTest {
        response.authToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbnZpcm9ubWVudCI6InRlc3QtZW52IiwiY2x1c3RlcklkZW50aWZpZXIiOiIyIiwiaWF0IjoxNTE2MjM5MDIyfQ.J806LOlfV15bTVzQVNfKil8VGQOVadXcXpfqTJ_xrZM';
        MockAuthenticator authenticator = new MockAuthenticator(response);
        FFAuthServiceCached authService = new FFAuthServiceCached('test-sdk-key', config, authenticator);
-       FFModels.AuthInfo result = authService.authenticate();
+       FFModels.AuthInfo result = authService.authenticate(false);
        System.assertEquals('2', result.cluster);
        System.assertEquals('test-env', result.environmentUUID);
-       String cacheKey = FFCacheKeys.getAuthCacheKey('test-sdk-key');
-       Map<String, String> stored = (Map<String, String>)config.cache.getAuth(cacheKey);
+       String authCacheKey = FFCacheKeys.getCacheKey('test-sdk-key');
+       Map<String, String> stored = (Map<String, String>)config.cache.getKey('auth'+authCacheKey);
        System.assertEquals(stored.get('environmentUUID'), 'test-env');
        System.assertEquals(stored.get('cluster'), '2');
        System.assertEquals(stored.get('jwt'), response.authToken);
+
+       // Ensure lastAuthTime gets cached
+       String lastAuthKey = FFCacheKeys.getCacheKey('test-sdk-key');
+       Long lastAuth = config.cache.getLastAuthKey('lastAuth'+lastAuthKey);
+       // Just assert that the key is there. We can't verify the timestamp in the test.
+       System.assertNotEquals(lastAuth, null);
     }
+
+
 
     @isTest
     private static void shouldRetryAuthenticationOn403() {
        FFConfig config = FFConfig.builder().cache(new FFMockCache()).build();
        FFModels.AuthenticationResponse response = new FFModels.AuthenticationResponse();
        response.authToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbnZpcm9ubWVudCI6InRlc3QtZW52IiwiY2x1c3RlcklkZW50aWZpZXIiOiIyIiwiaWF0IjoxNTE2MjM5MDIyfQ.J806LOlfV15bTVzQVNfKil8VGQOVadXcXpfqTJ_xrZM';
-       MockAuthenticator authenticator = new MockAuthenticator(response, 2); // FAIL TWICE
+       MockAuthenticator authenticator = new MockAuthenticator(response, 2, 403); // FAIL TWICE
        FFAuthServiceCached authService = new FFAuthServiceCached('test-sdk-key', config, authenticator);
-       FFModels.AuthInfo result = authService.authenticate();
+       FFModels.AuthInfo result = authService.authenticate(false);
+       System.assertEquals('2', result.cluster);
+       System.assertEquals('test-env', result.environmentUUID);
+       System.assertEquals(3, authenticator.called); // CALLED THREE TIMES
+    }
+
+
+    @isTest
+    private static void shouldRetryAuthenticationOn500() {
+       FFConfig config = FFConfig.builder().cache(new FFMockCache()).build();
+       FFModels.AuthenticationResponse response = new FFModels.AuthenticationResponse();
+       response.authToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbnZpcm9ubWVudCI6InRlc3QtZW52IiwiY2x1c3RlcklkZW50aWZpZXIiOiIyIiwiaWF0IjoxNTE2MjM5MDIyfQ.J806LOlfV15bTVzQVNfKil8VGQOVadXcXpfqTJ_xrZM';
+       MockAuthenticator authenticator = new MockAuthenticator(response, 2, 500); // FAIL TWICE
+       FFAuthServiceCached authService = new FFAuthServiceCached('test-sdk-key', config, authenticator);
+       FFModels.AuthInfo result = authService.authenticate(false);
        System.assertEquals('2', result.cluster);
        System.assertEquals('test-env', result.environmentUUID);
        System.assertEquals(3, authenticator.called); // CALLED THREE TIMES
@@ -59,10 +83,10 @@ private class FFAuthServiceCachedTest {
        FFConfig config = FFConfig.builder().cache(new FFMockCache()).build();
        FFModels.AuthenticationResponse response = new FFModels.AuthenticationResponse();
        response.authToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbnZpcm9ubWVudCI6InRlc3QtZW52IiwiY2x1c3RlcklkZW50aWZpZXIiOiIyIiwiaWF0IjoxNTE2MjM5MDIyfQ.J806LOlfV15bTVzQVNfKil8VGQOVadXcXpfqTJ_xrZM';
-       MockAuthenticator authenticator = new MockAuthenticator(response, 20); // FAIL More than max times
+       MockAuthenticator authenticator = new MockAuthenticator(response, 20, 500); // FAIL More than max times
        FFAuthServiceCached authService = new FFAuthServiceCached('test-sdk-key', config, authenticator);
        try {
-        FFModels.AuthInfo result = authService.authenticate();
+        FFModels.AuthInfo result = authService.authenticate(false);
             System.assert(false, 'Shouldn\'t get here');
        } catch(Exception e) {
             System.assertEquals(11, authenticator.called); // CALLED 1 Initial time + 10 Retries
@@ -74,10 +98,10 @@ private class FFAuthServiceCachedTest {
        FFConfig config = FFConfig.builder().cache(new FFMockCache()).authRetries(4).build();
        FFModels.AuthenticationResponse response = new FFModels.AuthenticationResponse();
        response.authToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbnZpcm9ubWVudCI6InRlc3QtZW52IiwiY2x1c3RlcklkZW50aWZpZXIiOiIyIiwiaWF0IjoxNTE2MjM5MDIyfQ.J806LOlfV15bTVzQVNfKil8VGQOVadXcXpfqTJ_xrZM';
-       MockAuthenticator authenticator = new MockAuthenticator(response, 20); // FAIL More than max times
+       MockAuthenticator authenticator = new MockAuthenticator(response, 20, 500); // FAIL More than max times
        FFAuthServiceCached authService = new FFAuthServiceCached('test-sdk-key', config, authenticator);
        try {
-        FFModels.AuthInfo result = authService.authenticate();
+        FFModels.AuthInfo result = authService.authenticate(false);
             System.assert(false, 'Shouldn\'t get here');
        } catch(Exception e) {
             System.assertEquals(5, authenticator.called); // CALLED 1 Initial time + 10 Retries
