--- a/force-app/test/FFClientTest.cls
+++ b/force-app/test/FFClientTest.cls
@@ -11,11 +11,53 @@ private class FFClientTest {
         }
     
         public HttpResponse respond(HttpRequest request) {
-            if(request.getEndpoint() == '/client/env/{environmentUUID}/feature-configs') {
+            String endpoint = request.getEndpoint();
+    
+            if (endpoint.contains('/client/env/{environmentUUID}/feature-configs')) {
                 return httpResponse(features);
             } else return httpResponse(targets);
+
         }
     }
+
+    private class MockFFAuthService implements FFAuthService {
+        private FFModels.AuthInfo mockAuthInfo;
+        private Long mockLastAuthTime;
+        public Boolean authenticateCalled = false;
+        public Boolean lastAuthTimeCalled = false;
+        public Boolean simulateEvictedAuthToken = false;
+    
+        public MockFFAuthService(FFModels.AuthInfo mockAuthInfo) {
+            this.mockAuthInfo = mockAuthInfo;
+        }
+
+        public MockFFAuthService(FFModels.AuthInfo mockAuthInfo, Boolean simulateEvictedAuthToken) {
+            this.mockAuthInfo = mockAuthInfo;
+            this.simulateEvictedAuthToken = simulateEvictedAuthToken;
+        }
+    
+        public FFModels.AuthInfo authenticate(Boolean force) {
+            authenticateCalled = true;
+            return mockAuthInfo;
+        }
+    
+        public Long getLastAuthTime() {
+            this.lastAuthTimeCalled = true;
+            return mockLastAuthTime;
+        }
+
+        public Boolean isAuthTokenPresent() {
+            if (this.simulateEvictedAuthToken) {
+                return false;
+            }
+            return true;
+        }
+    
+        public void setLastAuthTime(Long lastAuthTime) {
+            this.mockLastAuthTime = lastAuthTime;
+        }
+    }
+    
 
     private static HttpResponse httpResponse(Object content) {
         HttpResponse res = new HttpResponse();
@@ -26,7 +68,7 @@ private class FFClientTest {
         return res;
     }
 
-    private static FFClientApi mockClientApi(List<FFModelsFeatures.FeatureConfig> features, List<FFModelsFeatures.TargetSegment> targets) {
+    private static FFClientApi mockApi(List<FFModelsFeatures.FeatureConfig> features, List<FFModelsFeatures.TargetSegment> targets) {
         Test.setMock(HttpCalloutMock.class, new Responder(features, targets));
         Map<String, Object> params = new Map<String, Object>{
             'environmentUUID' => 'test',
@@ -35,12 +77,26 @@ private class FFClientTest {
         return new FFClientApi(new FFBaseCallout('test', 'test'));
     }
 
+    private static FFMetricsApi mockMetricsApi(List<FFModelsFeatures.FeatureConfig> features, List<FFModelsFeatures.TargetSegment> targets) {
+        Test.setMock(HttpCalloutMock.class, new Responder(features, targets));
+        Map<String, Object> params = new Map<String, Object>{
+            'environmentUUID' => 'test',
+            'cluster' => 'test'
+        };
+        return new FFMetricsApi(new FFBaseCallout('test', 'test'));
+    }
+
     @isTest
     private static void shouldUpdateCacheWithLatestFromHttpCalls() {
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+        
         List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
         List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+
+
         FFConfig config = FFConfig.builder().cache(new FFMockCache()).build();
-        FFClient client = new FFClient(mockClientApi(features, targets), null, config, 'test', 'test');
+        FFClient client = new FFClient(null, mockApi(features, targets), null, config, 'test', 'test');
         System.assertEquals(null, config.cache.getFeatures());
         System.assertEquals(null, config.cache.getSegments());
 
@@ -64,7 +120,7 @@ private class FFClientTest {
         cache.putSegments(targets, 1);
         FFConfig config = FFConfig.builder().cache(cache).build();
 
-        FFClient client = new FFClient(null, null, config, 'test', 'test');
+        FFClient client = new FFClient(null, null, null, config, 'test', 'test');
         FFTarget target = FFTarget.builder().identifier('test').build();
         System.assertEquals(false, client.boolVariation('test-feature', target, false));
         System.assertEquals(new Map<String, Object>(), client.jsonVariation('test-feature', target, new Map<String, Object>(), Map<String, Object>.class));
@@ -93,7 +149,7 @@ private class FFClientTest {
         cache.putSegments(targets, 1);
         FFConfig config = FFConfig.builder().cache(cache).evalExpireAfter(1).authExpireAfter(1).baseUrl('').eventsUrl('').featureConfigTimeToLive(1).build();
 
-        FFClient client = new FFClient(null, null, config, 'test', 'test');
+        FFClient client = new FFClient(null, null, null, config, 'test', 'test');
         FFTarget target = new FFTarget('test', '');
         target.attributes = new Map<String, Object> { 'a' => 'b' };
         System.assertEquals(true, client.boolVariation('test-feature', target, false));
@@ -119,7 +175,7 @@ private class FFClientTest {
         cache.putSegments(targets, 1);
         FFConfig config = FFConfig.builder().cache(cache).build();
 
-        FFClient client = new FFClient(null, null, config, 'test', 'test');
+        FFClient client = new FFClient(null, null, null, config, 'test', 'test');
         FFTarget target = new FFTarget('test', '');
         target.attributes = new Map<String, Object> { 'a' => 'b' };
         switch on kind {
@@ -201,8 +257,150 @@ private class FFClientTest {
         cache.putSegments(targets, 1);
         FFConfig config = FFConfig.builder().cache(cache).metricsEnabled().build();
 
-        FFClient client = new FFClient(null, null, config, 'test', 'test');
+        FFClient client = new FFClient(null, null, null, config, 'test', 'test');
         FFTarget target = FFTarget.builder().identifier('test').anonymous(false).attributes(null).build();
         System.assertEquals(false, client.boolVariation('test-feature', target, true));
     }
+
+    @isTest
+    private static void shouldReauthenticateWhenTokenIsAboutToExpire() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+        // Set the last authentication time to be just over 23 hours ago
+        // This simulates the condition where the token is near its expiration
+        Long pastTimeMillis = Datetime.now().addSeconds(-((23 * 60 * 60) + 1)).getTime();
+        mockAuthService.setLastAuthTime(pastTimeMillis);
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+        // Instantiate FFClient with the mock auth service
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        // Instantiate the CacheUpdator with the FFClient instance
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client, false);
+
+        cacheUpdator.call(null, null);
+
+        // Verify that reauthentication was triggered due to the token being near expiration
+        System.assertEquals(true, mockAuthService.authenticateCalled, 'Reauthentication was not triggered as expected');
+    }
+
+    @isTest
+    private static void shouldReauthenticateWhenTokenIsMissing() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo, true);
+
+        // Set the last authentication time to now
+        Long pastTimeMillis = Datetime.now().getTime();
+        mockAuthService.setLastAuthTime(pastTimeMillis);
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+        // Instantiate FFClient with the mock auth service
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        // Instantiate the CacheUpdator with the FFClient instance
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client, false);
+
+        cacheUpdator.call(null, null);
+
+        // Verify that reauthentication was triggered due to the token missing
+        System.assertEquals(true, mockAuthService.authenticateCalled, 'Reauthentication was not triggered as expected');
+    }
+
+    @isTest
+    private static void shouldReauthenticateWhenLastAuthTimeIsMissing() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+        // Don't set the last auth time in order to simulate a cache eviction, just create client
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+
+        // Instantiate FFClient with the mock auth service
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        // Instantiate the CacheUpdator with the FFClient instance
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client, false);
+
+        cacheUpdator.call(null, null);
+
+        // Verify that reauthentication was triggered due to the token missing
+        System.assertEquals(true, mockAuthService.authenticateCalled, 'Reauthentication was not triggered as expected');
+    }
+
+    @isTest
+    private static void shouldNotReauthenticateWhenTokenIsStillValid() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+        // Set the last authentication time to be very recent
+        Long recentTimeMillis = Datetime.now().addSeconds(-100).getTime();
+        mockAuthService.setLastAuthTime(recentTimeMillis);
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client, false);
+
+
+        cacheUpdator.call(null, null);
+
+        // Assert that authentication hasn't happened 
+        System.assertEquals(false, mockAuthService.authenticateCalled, 'Reauthentication was incorrectly triggered');
+    }
+
+    @isTest
+    private static void shouldSkipFirstPollIfWaitForInitialized() {
+        // Create mock authentication information
+        FFModels.AuthInfo mockAuthInfo = new FFModels.AuthInfo('mockToken', 'envUUID', 'cluster');
+        MockFFAuthService mockAuthService = new MockFFAuthService(mockAuthInfo);
+
+        // Set the last authentication time to be very recent
+        Long recentTimeMillis = Datetime.now().addSeconds(-100).getTime();
+        mockAuthService.setLastAuthTime(recentTimeMillis);
+
+        // Create the FFClient configuration with a specified expiration interval
+        FFConfig config = FFConfig.builder().authExpireAfter(24 * 60 * 60) // Token expires after 24 hours
+                                    .cache(new FFMockCache()).build();
+
+        List<FFModelsFeatures.FeatureConfig> features = new List<FFModelsFeatures.FeatureConfig>();
+        List<FFModelsFeatures.TargetSegment> targets = new List<FFModelsFeatures.TargetSegment>();
+        FFClient client = new FFClient(mockAuthService, mockApi(features, targets), mockMetricsApi(features, targets), config, 'test', 'test');
+
+        // set waitForInitialized to true
+        FFClient.CacheUpdator cacheUpdator = new FFClient.CacheUpdator(client, true);
+
+        // Do the initial poll
+        cacheUpdator.call(null, null);
+    
+        // Assert that the cache updator doesn't check lastAuthTime on first call
+        System.assertEquals(false, mockAuthService.lastAuthTimeCalled, 'Initial poll wasn not skipped when waitForInitialized was requested');
+    }
+
 }
